--- a/Code/Test/CVO-Mobile/CVO-Mobile/Resultaten.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Resultaten.cshtml
@@ -44,7 +44,7 @@
             <form id="search" action="" method="post">
                 <input type="text" name="cursusResultaat-CursistNummer" id="cursusResultaat-CursistNummer" /> <br />
                 <br />
-                <button type="submit" name="action" value="search">Zoek lessenrooster</button>
+                <button type="submit" name="action" value="search">Puntenoverzicht opvragen</button>
                 <button type="submit" name="action" value="cancel">Annuleren</button>
             </form>
         </aside>
