--- a/Code/Test/CVO-Mobile/CVO-Mobile/TweedezitResultaat.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/TweedezitResultaat.cshtml
@@ -64,6 +64,8 @@
                             <th>Datum</th>
                             <th>Van</th>
                             <th>Tot</th>
+                            <td>Ingeschreven</td>
+                            <td>Punten</td>
                         </tr>
                         @foreach (Administratix.BLL.TweedezitResultaat res in Resultaat)
                         {
@@ -73,6 +75,8 @@
                                 <td>@res.Datum</td>
                                 <td>@res.Van</td>
                                 <td>@res.Tot</td>
+                                <td>@res.Ingeschreven</td>
+                                <td>@res.Punten</td>
                             </tr>
                         }
                     </table>
