--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Footer.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Footer.cshtml
@@ -1,4 +1,18 @@
-﻿<div class="Footer">   
-    <p>©CopyRight 2015 Projectwerk HBO Informatica</p>
-    <img src="~/Pictures/rsz_update_mobilecvo_logos.jpg"/>
-</div>
+﻿@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title></title>
+</head>
+<body>
+    <div class="footer">
+        <p>&copy; 2015 Projectwerk HBO Informatica. All rights reserved.</p>
+        <img src="~/Images/Logo_mobileCVO.jpg" />       
+    </div>
+</body>
+</html>
