--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Header.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Header.cshtml
@@ -1,7 +1,19 @@
-﻿<header>
+﻿@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title></title>
+</head>
+<body>
     <div class="header">
-        <img src="~/Pictures/logocvoantwerpen1.png" />
-        <p>Cursist Nummer<input type="text" /></p>
+        <img src="~/Images/Logo_CVOAntwerpen.png" />
+        <p>Cursist Nummer :<input type="text" /></p>
         <button type="submit" name="action" value="Inloggen">Inloggen</button>
     </div>
-</header>
+</body>
+</html>
