--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Layout.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Layout.cshtml
@@ -1,8 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+
 <html>
 <head>
+    <meta name="viewport" content="width=device-width" />
     <title>@Page.title</title>
-    <link href="~/Style/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     @RenderPage("~/Shared/_Header.cshtml")
