--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
@@ -1,30 +1,44 @@
-﻿<nav>
-    <div class="Nav">
-        <img src="~/Pictures/PicMenu.png" />
-        <img src="~/Pictures/PicLinks.png" />
-        <img src="~/Pictures/PicPijlRechts.png" />
-        <div class="links">
-            <a href="">
-                <img src="~/Pictures/1429563973_calendar.png" />
-                <h2>
-                    Kalender
-                </h2>
-            </a>
+﻿@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title></title>
+</head>
+<body>
+    <nav>
+        <div class="Nav">
+            <img src="~/Images/home.png" />
+            <img src="~/Images/nav_left.png" />
+            <img src="~/Images/nav_right.png" />
+            <div class="links">
+                <a href="">
+                    <img src="~/Images/kalender.png" />
+                    <h2>
+                        Kalender
+                    </h2>
+                </a>
 
 
-            <a href="">
-                <img src="~/Pictures/1429563998_graduation_cap.png" />
-                <h2>
-                    Traject
-                </h2>
-            </a>
+                <a href="">
+                    <img src="~/Images/traject.png" />
+                    <h2>
+                        Traject
+                    </h2>
+                </a>
 
 
-            <a href="">
-                <img src="~/Pictures/1429564179_mouse.png" />
-                <h2>Meldingen</h2>
-            </a>
+                <a href="">
+                    <img src="~/Images/contact.png" />
+                    <h2>Contact</h2>
+                </a>
 
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+</body>
+</html>
