--- a/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
@@ -1,4 +1,5 @@
-﻿* {
+﻿/*Opmaak voor de website*/
+* {
     margin:0;
     padding:0;
     font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
@@ -17,33 +18,39 @@
     min-height:90px;
     box-sizing:border-box;
     background-color:#4388cc;
+    border-bottom: 4px solid #00ffff;
+        
 }
 
 .header img{
     float:left;
     width:321px;
-    height:79px;
+    height:84px;
     background-color:#ffffff;
-    margin-left:5px;
-    margin-top:5px;
+    margin-left:3px;
+    margin-top:2px;    
+    
 }
 
 .header p{
     float:right;
-    margin-right:10px;
-    margin-top:10px;
+    margin-right:30px;
+    margin-top:30px;
+    color:white;
 }
 
 .header input{
-    margin-left:5px;
+    margin-left:20px;
+    height:20px;
 }
 
 .header button{
     clear:right;
     float:right;
     margin-top:5px;
-    margin-right:10px;
-    padding:2px;
+    margin-right:30px;
+    padding:4px;
+    width:80px;
 }
 
 .Nav{
@@ -54,6 +61,8 @@
 
 .Nav img, .links h2,.spacing{
     float:left;
+    font-size:38px;
+    
 }
 
 /*.links img{
@@ -62,19 +71,20 @@ margin-left:8%;
 }*/
 
 .links h2{
-    margin-top:35px;
+    margin-top:50px;
 }
 
 .Nav img{
     width:40px;
     height:40px;
-    margin:10px;
+    margin:20px;
 }
 
 .links img{
     width:80px;
     height:80px;
     margin-left:10%;
+    
 }
 
 /*.Test{
@@ -124,27 +134,28 @@ margin-left:8%;
     height:70px;
 }*/
 
-.Footer{
+.footer{
     clear:both;
     position:fixed;
     bottom:0;
     background-color:#4388cc;
-    height:75px;
+    border-top: 4px solid #00ffff;
+    height:50px;
     width:100%;
 
 }
 
-.Footer p{
-    margin-top:30px;
-    margin-left:10px;
+.footer p{
+    margin-top:24px;
+    margin-left:30px;    
     float:left;
 }
 
-.Footer img{
+.footer img{
     float:right;
     width:264px;
-    height:53px;  
-    margin-bottom:10px;
-    margin-right:10px;
-    margin-top:10px;
+    height:55px;  
+    margin-bottom:2px;
+    margin-right:2px;    
+    margin-top:0px;
 }
