--- a/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
@@ -193,3 +193,19 @@ th {
     height: 16px;
     display: inline-block;
 }
+
+.moodleCourse{
+    font-size: 25px;
+    padding-bottom: 10px;
+}
+
+.moodleAssignment{
+    font-size:medium;
+    font-weight: bold;
+    padding: 0px 0px 10px 10px;
+}
+
+.moodleGrade{
+    font-weight: normal;
+    padding-left: 10px;
+}
